--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,10 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "SaUserDB": "Server=DESKTOP-G0N0BUD\\SQLEXPRESS;Database=ResourceDB;Trusted_Connection=True;TrustServerCertificate=True;",
-        "_SaUserDB": "Server=DESKTOP-RUJ2TUO\\SQLEXPRESS;Database=ResourceDB;User Id=Tag;Password=P@123Tag;"
-    },
-    "UploadFolderPath": "C:\\TESTSTORAGE\\TEST"
+        "ResourceDB": "Server=DESKTOP-G0N0BUD\\SQLEXPRESS;Database=ResourceDBRefactoring;Trusted_Connection=True;TrustServerCertificate=True;",
+        "_ResourceDB": "Server=DESKTOP-RUJ2TUO\\SQLEXPRESS;Database=ResourceDB;User Id=Tag;Password=P@123Tag;"
+
+    }
 
 
 
